--- a/section/promoteOffers/on-site-placements.mdx
+++ b/section/promoteOffers/on-site-placements.mdx
@@ -5,10 +5,10 @@ icon: 'square-web-awesome-stroke'
 ---
 
 On-site messaging (OSM) is a powerful way to drive conversions by surfacing offers directly on product/checkout pages, maximising conversion of high intent shoppers.
-No additional development work is needed to add OSM to your site as long as the [head script](section/gettingStarted/integrateOnSite) has been installed.
+No additional development work is needed to add OSM to your site as long as the [head script](section/gettingStarted/integrateOnSite) has already been installed.
 
 ## Types of on-site messaging
-Out of the box, gocertify supports three main types of on-site messaging, but with heavy customisation available you can build a tailored placement that meets your needs.
+Out of the box, gocertify supports three main types of on-site messages, but with heavy customisation available you can build a tailored placement that meets your needs.
 
 <CardGroup cols={3}>
   <Card title="In-line" href="/section/promoteOffers/on-site-placements" img="/images/OSM-inline.png">
@@ -38,5 +38,3 @@ You have full control of all your on-site messages via the [gocertify dashboard]
     alt="Client Dashboard Screenshot"
 />
 </Frame>
-
-
