--- a/section/promoteOffers/osmVisibility.mdx
+++ b/section/promoteOffers/osmVisibility.mdx
@@ -51,7 +51,7 @@ You can add multiple rules to a placement to combine these rules to match your c
   <Accordion title="Only show on staging" icon="hammer">
     Set a path rule for `path` `contains` `?my_oms_test=true`. Manually add this query to the end of the URL in staging
   </Accordion>
-  <Accordion title="Only show on certain Products" icon="rectangle-list">
+  <Accordion title="Only show on certain products" icon="rectangle-list">
   Create a path rule for `path` `contains` `category/product`. Placement will only show when for items within that category.
   </Accordion>
   <Accordion title="Don't show on sale items" icon="clipboard-list">
