--- a/section/trackImpact/report.mdx
+++ b/section/trackImpact/report.mdx
@@ -1,5 +1,27 @@
 ---
 title: 'Self-serve reporting'
-description: 'Display inline code and code blocks'
+description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'chart-simple'
 ---
+
+The gocertify platform offers a range of reporting tools to help you track the impact of your campaigns. Some example reports are shown below and your account manager can give you a full tour!
+
+<img src="/images/gocertify-Dashboard.png" alt="Report" style={{borderRadius: '0.5rem'}} />
+
+<CardGroup cols={3}>
+  <Card title="Funnel Analysis" img="/images/dashboard-coupon-funnel.png">
+    See how many shoppers are completing each step of the verification process.
+  </Card>
+  <Card title="Repeat Verification" img="/images/dashboard-verification-breakdown.png">
+    See how many shoppers are completing the verification process more than once.
+  </Card>
+  <Card title="Country Breakdown" img="/images/dashboard-verification-country.png">
+    See where your shoppers are located.
+  </Card>
+  <Card title="Device Breakdown" img="/images/dashboard-verification-device.png">
+    See how many shoppers are completing the verification process via each device type.
+  </Card>
+  <Card title="Verification Type" img="/images/dashboard-verification-type.png">
+    See how many shoppers belong to each closed user group type.
+  </Card>
+</CardGroup>
