--- a/section/promoteOffers/osmPersonalisationIntegrations.mdx
+++ b/section/promoteOffers/osmPersonalisationIntegrations.mdx
@@ -4,6 +4,7 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'bolt-lightning'
 ---
 
+goertify let's you integrate with Customer Experience Platforms (CXP) to deliver an even more personalised shopping experience, delivering rewards and offers to shoppers based on their profile and preferences.
 
 <CardGroup cols={2}>
   <Card title="Nosto" href="/section/promoteOffers/nosto" img="https://www.nosto.com/wp-content/uploads/2024/06/Primary-logo.jpg">
