Updating docs on feedback

--- a/section/buildRewardFlows/chooseReward.mdx
+++ b/section/buildRewardFlows/chooseReward.mdx
@@ -6,9 +6,9 @@ icon: 'hand-holding-heart'
 
 gocertify centralises reward management, simplifying how you tailor and distribute them to your brand and your audience. The key reward types are:
 
-- [Discounts](/documentationSections/1_buildRewardFlows/discounts) - unique or multi-use coupons for monetary (£) and percentage off (%)
-- [Gift Cards](/documentationSections/1_buildRewardFlows/giftCards) - delivered digitally after qualifying purchases
-- [Gated Content](/documentationSections/1_buildRewardFlows/gatedContent) - Exclusive access to a discounted pricing storefront or premium content
+- [Discounts](/section/buildRewardFlows/discounts) - unique or multi-use codes for monetary (£) and percentage off (%)
+- [Gift Cards](/section/buildRewardFlows/giftCards) - delivered digitally after qualifying purchases
+- [Gated Content](/section/buildRewardFlows/gatedContent) - Exclusive access to a discounted pricing storefront or premium content
 
 <Tip>
   You can link your preferred reward playform (i.e. Uniqodo or Awin Vouchers) to your gocertify account for an automated reward feed or simply upload a CSV file of your existing offers.
