--- a/section/buildRewardFlows/discounts.mdx
+++ b/section/buildRewardFlows/discounts.mdx
@@ -5,27 +5,27 @@ icon: 'fa-fw'
 ---
 
 Discounts are the most common reward type used by brands, and can be used to convert shoppers with monetary (£) or percentage off (%) incentives. If you'd 
-rather provide secure access to a storefront with the discounts pre-applied, you can use our [Gated Content](/documentationSections/1_buildRewardFlows/gatedContent) reward type instead.
+rather provide secure access to a storefront with the discounts pre-applied, you can use our [Gated Content](/section/buildRewardFlows/gatedContent) reward type instead.
 
 <Tip>
   We recommend adding a prefix e.g. HEALTH-20 for Healthcare Workers - so you can run personalisation for each group using your CRM / CDP
 </Tip>
 
-## Unique coupons
-Unique, or single-use couponds let you give every shopper a different coupon code. We require a CSV of these coupon codes or can integrate directly with your
+## Unique codes
+Unique, or single-use codes let you give every shopper a different discount code. We require a CSV of these codes or can integrate directly with your
 preferred promotion service.
 
 <AccordionGroup>
 <Accordion title="Uploading CSV" icon="file-csv">
-    Provide us with a single column CSV of coupon codes.
+    Provide us with a single column CSV of discount codes.
 </Accordion>
 <Accordion title="Integrating with Uniqodo" icon="ticket-simple">
-    Provide us with your Uniqodo `API key` and `offer ID` (e.g. 9384) and we'll automatically add shoppers to your campaign. You can also upload a CSV of coupon codes as a fallback.
+    Provide us with your Uniqodo `API key` and `offer ID` (e.g. 9384) and we'll automatically add shoppers to your campaign. You can also upload a CSV of discount codes as a fallback.
 </Accordion>
 <Accordion title="Integrating with your affiliate network" icon="diagram-project">
-    We can fetch coupon codes directly from your affiliate network offer feed.
+    We can fetch codes directly from your affiliate network offer feed.
 </Accordion>
 </AccordionGroup>
 
-## ∞ Multi-use coupons
-Standard coupons let you give every shopper of the same campaign the same coupon code e.g. `SAVE20`. Provide us with the coupon code and we'll apply it to your campaign.
+## Multi-use (generic) codes
+Multi-use codes, also known as generic or vanity codes, let you give every shopper of the same campaign the same discount code e.g. `SAVE20`. To avoid leakage, where codes are shared outside of your expected channels, we recommend making these codes distinct and unique to your campaign. Provide us with the code and we'll apply it to your campaign.
