--- a/section/gettingStarted/customiseBranding.mdx
+++ b/section/gettingStarted/customiseBranding.mdx
@@ -88,7 +88,7 @@ You can provide up to 4 font files to customise the heading, normal, tagline and
 </Frame>
 
 #### Custom Styling
-The Advanced CSS option let's you can go even further with your customisation. The most popular customisations are captured below, or refer to the [Advanced CSS](/documentationSections/1_buildRewardFlows/advanceCSS) section for more details.
+The Advanced CSS option let's you can go even further with your customisation. Your customer success manager will be able to help you build and apply any customisations you need, but for inspiration the most popular customisations are captured below. The [Advanced CSS](/section/buildRewardFlows/advancedCSS) section has even more examples.
 
 <AccordionGroup>
   <Accordion title="Hide iFrame Brand Logo" icon="square-minus">
