updated based on feedback

--- a/section/buildRewardFlows/chooseReward.mdx
+++ b/section/buildRewardFlows/chooseReward.mdx
@@ -11,5 +11,5 @@ gocertify centralises reward management, simplifying how you tailor and distribu
 - [Gated Content](/section/buildRewardFlows/gatedContent) - Exclusive access to a discounted pricing storefront or premium content
 
 <Tip>
-  You can link your preferred reward playform (i.e. Uniqodo or Awin Vouchers) to your gocertify account for an automated reward feed or simply upload a CSV file of your existing offers.
+  You can link your preferred reward playform (i.e. Uniqodo) to your gocertify account for an automated reward feed or simply upload a CSV file of your existing offers.
 </Tip>
