--- a/section/buildRewardFlows/discounts.mdx
+++ b/section/buildRewardFlows/discounts.mdx
@@ -20,7 +20,7 @@ preferred promotion service.
     Provide us with a single column CSV of discount codes.
 </Accordion>
 <Accordion title="Integrating with Uniqodo" icon="ticket-simple">
-    Provide us with your Uniqodo `API key` and `offer ID` (e.g. 9384) and we'll automatically add shoppers to your campaign. You can also upload a CSV of discount codes as a fallback.
+    Provide us with your Uniqodo `API key` and `offer ID` (e.g. 9384) and we'll automatically add codes to your campaign. You can also upload a CSV of discount codes as a fallback.
 </Accordion>
 <Accordion title="Integrating with your affiliate network" icon="diagram-project">
     We can fetch codes directly from your affiliate network offer feed.
