--- a/section/buildRewardFlows/fullClosedUserGroups.mdx
+++ b/section/buildRewardFlows/fullClosedUserGroups.mdx
@@ -40,59 +40,34 @@ gocertify's AI powered verification process verifies shoppers quickly, accuratel
 
 
 
-## Top Groups
+## Supported Groups
 
 gocertify supports 40+ closed user groups out of the box and can support additional groups on request.
 
-**Student groups**: give rewards to students, apprentices and graduates.
 <AccordionGroup>
+
+  <Accordion title="Disability" icon="wheelchair">
+    **Definition:** The UK gov disability census defines disability as a self-reported individual who had physical/mental health conditions lasting over 
+    12 months impacting day-to-day activities. This aligns with the definition of disability in the Equalities act of 2010.
+
+    **Verification methods:**
+     Disabled Railcard & Bus pass; Blue Badge; Attendance Allowance Letter;Disability Living Allowance (DLA) Letter; Personal Independence Payment (PIP) Award Letter
+
+  </Accordion>
+
+  <Accordion title="Military" icon="shield-halved">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
   <Accordion title="Students" icon="graduation-cap">
-      **Definition:**
-      
-      **Verification methods:**
-  </Accordion>
-
-  <Accordion title="Apprentice" icon="hammer">
     **Definition:**
     
     **Verification methods:**
   </Accordion>
 
-  <Accordion title="Graduates" icon="graduation-cap">
-    **Definition:**
-    
-    **Verification methods:**
-  </Accordion>
-
-</AccordionGroup>
-
-**Age:** give rewards based on age categories.
-<AccordionGroup>
-  <Accordion title="Youth" icon="alien-8bit">
-      **Definition:**
-      
-      **Verification methods:**
-  </Accordion>
-
-  <Accordion title="Age Discount" icon="image-portrait">
-    **Definition:** Customised
-    
-    **Verification methods:**
-  </Accordion>
-
-  <Accordion title="Seniors" icon="user">
-    **Definition:**
-    
-    **Verification methods:**
-  </Accordion>
-
-</AccordionGroup>
-
-**Key and essential workers:** give rewards to those who work in key and essential roles.
-
-<AccordionGroup>
-
-  <Accordion title="Healthcare" icon="heart">
+  <Accordion title="NHS" icon="heart">
     **Definition:**
     
     **Verification methods:**
@@ -104,10 +79,10 @@ gocertify supports 40+ closed user groups out of the box and can support additio
     **Verification methods:**
   </Accordion>
 
-  <Accordion title="Military" icon="shield-halved">
-      **Definition:**
-      
-      **Verification methods:**
+  <Accordion title="Youth" icon="alien-8bit">
+    **Definition:**
+    
+    **Verification methods:**
   </Accordion>
 
   <Accordion title="Police & Fire Service" icon="fire-extinguisher">
@@ -117,6 +92,30 @@ gocertify supports 40+ closed user groups out of the box and can support additio
   </Accordion>
 
   <Accordion title="First Responder" icon="truck-medical">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Social" icon="hands-holding-child">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Apprentice" icon="hammer">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Strava" icon="person-running">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Donate" icon="circle-dollar-to-slot">
     **Definition:**
     
     **Verification methods:**
@@ -146,59 +145,56 @@ gocertify supports 40+ closed user groups out of the box and can support additio
     **Verification methods:**
   </Accordion>
 
+
+  <Accordion title="Diabetes" icon="kit-medical">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Graduates" icon="graduation-cap">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Festival Worker" icon="cloud-sun">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
   <Accordion title="Social Worker" icon="hands-holding-child">
     **Definition:**
     
     **Verification methods:**
   </Accordion>
 
-  <Accordion title="Emergency Service Workers" icon="user-nurse">
+  <Accordion title="Essential Worker" icon="user-nurse">
     **Definition:**
     
     **Verification methods:**
   </Accordion>
 
-</AccordionGroup>
-
-**Action based:** give rewards based on actions taken by the shopper.
-
-<AccordionGroup>
-
-<Accordion title="Social follower" icon="hashtag">
+  <Accordion title="Postal & Transport Staff" icon="truck">
     **Definition:**
     
     **Verification methods:**
   </Accordion>
 
-  <Accordion title="Strava" icon="person-running">
+  <Accordion title="Dealmaker" icon="handshake">
     **Definition:**
     
     **Verification methods:**
   </Accordion>
-
-  <Accordion title="Donate" icon="circle-dollar-to-slot">
-    **Definition:**
-    
-    **Verification methods:**
-  </Accordion>
-
-</AccordionGroup>
-
-**Other groups:** give rewards to shoppers who meet specific criteria.
-
-<AccordionGroup>
-
-  <Accordion title="Disability" icon="wheelchair">
-    **Definition:** The UK gov disability census defines disability as a self-reported individual who had physical/mental health conditions lasting over 
-    12 months impacting day-to-day activities. This aligns with the definition of disability in the Equalities act of 2010.
-
-    **Verification methods:**
-     Disabled Railcard & Bus pass; Blue Badge; Attendance Allowance Letter;Disability Living Allowance (DLA) Letter; Personal Independence Payment (PIP) Award Letter
-
-  </Accordion>
-
 
   <Accordion title="Maternity Leave" icon="baby-carriage">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Nike Run Club" icon="person-running">
     **Definition:**
     
     **Verification methods:**
@@ -210,5 +206,69 @@ gocertify supports 40+ closed user groups out of the box and can support additio
     **Verification methods:**
   </Accordion>
 
+  <Accordion title="Code Generator" icon="code">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
 
+  <Accordion title="Receipt Discount" icon="receipt">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Over 25" icon="id-card">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Student & Youth" icon="alien-8bit">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Shop Runner" icon="shop">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Age Discount" icon="image-portrait">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Emergency Service Workers" icon="user-nurse">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Deliveroo Riders" icon="motorcycle">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Debenhams Beauty Club" icon="face-grin-hearts">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="QuickBooks Exclusive" icon="chart-line">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Veterinary Staff" icon="dog">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
 </AccordionGroup>
