--- a/section/captureData/dataCapture.mdx
+++ b/section/captureData/dataCapture.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Enable Data Capture'
+title: 'Enable DataCapture'
 description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'wpforms'
 ---
@@ -8,5 +8,16 @@ Datacapture is enabled at the brand level with the ability to apply datacpature 
 Once switched on shoppers will experience an additional step in the reward flow where they can opt-in to share their data in return for rewards. This screen will
 appear after login but before verification.
 
-(show flow of datacapture)
+<Frame caption="Datacapture adds an additional step to the reward flow where you can collect data from shoppers">
+  <img
+    className="block dark:hidden"
+    src="/images/dataCaptureFlow.png"
+    alt="Hero Light"
+  />
+  <img
+    className="hidden dark:block"
+    src="/images/dataCaptureFlow.png"
+    alt="Hero Dark"
+  />
+</Frame>
 
