--- a/section/captureData/overview.mdx
+++ b/section/captureData/overview.mdx
@@ -10,7 +10,7 @@ this data is a powerful asset for your brand - enabling you to:
 - **Personalise** the shopping experience for your shoppers
 - **Optimise** your marketing spend
 
-<Frame caption = "Kwik Fit use datacapture to personalise the shopping experience and direct shoppers to their local branch">
+<Frame caption = "Kwik Fit use DataCapture to personalise the shopping experience and direct shoppers to their local branch">
 <img
     className="block dark:hidden"
     src="/images/kwikFit.png"
