--- a/section/gettingStarted/advancedCss.mdx
+++ b/section/gettingStarted/advancedCss.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Customise Branding'
+title: 'Advanced CSS'
 description: 'Convert shoppers with targeted, gated offers.'
 icon: 'paintbrush'
 ---
@@ -24,6 +24,11 @@ The Advanced CSS option let's you can go even further with your customisation.
     ```
   </Accordion>
 
+  <Accordion title="Change appearance on mobile" icon="tablet">
+    ```css
+    `@media (max-width: 767px){.gc-box{right: 0; top: 0; bottom: unset;}}`
+    ```
+  </Accordion>
 
   <Accordion title="Customise fonts" icon="t">
     <CodeGroup>
