--- a/section/gettingStarted/integrateOnSite.mdx
+++ b/section/gettingStarted/integrateOnSite.mdx
@@ -11,6 +11,10 @@ import LightweightScript from '/snippets/lightweight-script.mdx';
 
 Integrate gocertify by adding the following gocertify <Tooltip tip="Our script is just 12kb and optimised for performance">script</Tooltip> to your site's `<head>` using either a tag manager (no developer needed) or manually pasting it in (basic HTML knowledge recommended). The setup takes less than 2 minutes!
 
+<Tip>
+  Remember to replace `example-company` with your actual company name in the script below.
+</Tip>
+
 ```javascript gocertify-script
         <script>
           (function() {
@@ -83,9 +87,6 @@ Tag managers let you can easily add the gocertify script site-wide without needi
         Once activated the final modal will give you the option to `View My Plugins`. Select this and you will see that the plugin is activated and the script has been deployed.
       </Step>
     </Steps>
-  </Accordion>
-  <Accordion icon="shopify" title="Shopify">
-    Coming soon
   </Accordion>
 </AccordionGroup>
 
