--- a/section/promoteOffers/inStore.mdx
+++ b/section/promoteOffers/inStore.mdx
@@ -4,3 +4,16 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'shop'
 ---
 
+
+<Frame caption="..">
+  <img
+    className="block dark:hidden"
+    src="/images/flashingInStoreCode.gif"
+    alt="Flashing in store code"
+  />
+  <img
+    className="hidden dark:block"
+    src="/images/flashingInStoreCode.gif"
+    alt="Flashing in store code"
+  />
+</Frame>
