--- a/section/promoteOffers/landingPages.mdx
+++ b/section/promoteOffers/landingPages.mdx
@@ -7,11 +7,8 @@ icon: 'map'
 import LandingPageSteps from '/snippets/landing-page-integration-steps.mdx';
 
 
-Landing pages are a powerful tool for converting key communities and boosting your SEO. To get the most out of the gocertify experience we recommend you: 
+Landing pages are a powerful tool for converting key communities and boosting your SEO.
 
-
-  * **Create a landing page** for each of your high value campaigns (i.e. 20% off for Students) 
-  * **Create multi-offers page** to showcase all your discounts in one place. 
 
 ## Create Campaign landing pages
 <Tip>
@@ -19,20 +16,22 @@ Landing pages are a powerful tool for converting key communities and boosting yo
 
   To increase SEO traffic ensure that the group name and “discount” is mentioned.
 
+  - **Clear Page Slug:** i.e `student`, `key-worker`, `senior`, `youth`, `disability`
   - **Meta title and H1:** _company_ student discount
   - **Meta description:** We know that a little help goes a long way when you're a student. Verify your student status and you can get 10% off.
+  - **Relevant Copy:** ~300 words talking about the campaign and why it's important to your audience.
 
 </Tip>
 
-<Frame caption="LK Bennetts campaign pages drive evergreen revenue growth YoY.">
+<Frame caption="Farfetch campaign pages drive evergreen revenue growth YoY.">
   <img
     className="block dark:hidden"
-    src="/images/LKBennett-iFrame.png"
+    src="/images/farfetchCampaign.png"
     alt="Hero Light"
   />
   <img
     className="hidden dark:block"
-    src="/images/LKBennett-iFrame.png"
+    src="/images/farfetchCampaign.png"
     alt="Hero Dark"
   />
 </Frame>
