--- a/section/promoteOffers/offerHub.mdx
+++ b/section/promoteOffers/offerHub.mdx
@@ -10,8 +10,13 @@ OfferHub is a centralised location for all your discounts and offers. It's a gre
 <Tip>
   Best practice is to create a dedicated multi-offers page to showcase all your discounts in one place. To increase SEO traffic ensure the terms “discount codes”, “offers” and “coupon” (if wanting to rank in the the USA) are mentioned:
 
-  - **Meta title and H1:** Official {company} Discount Codes and Offers
-  - **Meta description:** Did you just search for a _company_ discount code? That's an intelligent move - you're obviously a savvy shopper. This is the official discount code page for _company_ and you won't find a better discount elsewhere.
+  - **Clear Page Slug:** i.e `discounts`
+  - **Meta title and H1:** Official _Brand_ Discount Codes and Offers
+  - **Meta description:** Did you just search for a _brand_ discount code? That's an intelligent move - you're obviously a savvy shopper. This is the official discount code page for _brand_ and you won't find a better discount elsewhere.
+  - **Relevant Copy:** ~300 words talking about the rewards you offer and why they're important to your audience.
+  - **FAQs:** Answer common questions about your rewards.
+
+
 </Tip>
 
   <Frame caption="OfferHub is a powerful showcase of all your offers and discounts in one place. ">
