--- a/section/promoteOffers/on-site-placements.mdx
+++ b/section/promoteOffers/on-site-placements.mdx
@@ -11,13 +11,13 @@ No additional development work is needed to add OSM to your site as long as the 
 Out of the box, gocertify supports three main types of on-site messages, but with heavy customisation available you can build a tailored placement that meets your needs.
 
 <CardGroup cols={3}>
-  <Card title="In-line" href="/section/promoteOffers/on-site-placements" img="/images/OSM-inline.png">
+  <Card title="In-line" href="/section/promoteOffers/inlinePlacementOSM" img="/images/inlinePlacementOSM.png">
     Display rewards directly on product/checkout pages, maximising conversion of high intent shoppers.
   </Card>
-  <Card title="Sticky Bar" href="/section/promoteOffers/on-site-placements" img="/images/OSM-stickyBar.png">
+  <Card title="Sticky Bar" href="/section/promoteOffers/stickyBarOSM" img="/images/stickyBarOSM.png">
     Display rewards from a prominent sticky bar at the top or bottom of your site. Highly visible and no-dev installation.
   </Card>
-  <Card title="Floating Button" href="/section/promoteOffers/on-site-placements" img="/images/OSM-floating.png">
+  <Card title="Floating Button" href="/section/promoteOffers/floatingButtonOSM" img="/images/floatingButtonOSM.png">
     Display a hovering trigger that floats above the page content. Highly visible and no-dev installation.
   </Card>
 </CardGroup>
