--- a/section/buildRewardFlows/overview.mdx
+++ b/section/buildRewardFlows/overview.mdx
@@ -8,7 +8,7 @@ Campaigns form the fundamental building blocks of reward flows. When you create 
 * [Choose the reward](/section/buildRewardFlows/chooseReward) you want to offer (e.g 20% off to Key Workers)
 * [Customise the copy](/section/buildRewardFlows/customiseCopy) and design of the campaign
 * [Gate the offer](/section/buildRewardFlows/closedUserGroups) to a specific audience (or make it available to all shoppers)
-* [Enable datacapture](/section/captureData/overview) to collect information from shoppers (e.g email address)
+* [Enable DataCapture](/section/captureData/overview) to collect information from shoppers (e.g email address)
 
 You can also group campaigns, enabling you to have one parent campaign (i.e. <a href="https://secure.gocertify.me/at/gosnow/key-worker">Key Worker Discounts</a>) and then have child campaigns (i.e. <a href="https://secure.gocertify.me/at/gosnow/key-worker/healthcare">Healthcare Workers</a> and <a href="https://secure.gocertify.me/at/gosnow/key-worker/teacher">Teachers</a>).
 
@@ -27,6 +27,6 @@ You can also group campaigns, enabling you to have one parent campaign (i.e. <a 
   />
 </Frame>
 
-In this section we'll cover how to create and configure campaigns but feel free to skip ahead to the [Data capture](/section/captureData/overview) 
+In this section we'll cover how to create and configure campaigns but feel free to skip ahead to the [DataCapture](/section/captureData/overview) 
 section to learn more about how to leverage rewards to understand your customers better or the [Promotion](/section/promoteOFfers/overview) section 
 to learn how to omnichannel promote these offers to your customers.
