--- a/section/captureData/customFields.mdx
+++ b/section/captureData/customFields.mdx
@@ -4,11 +4,11 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'person-circle-question'
 ---
 
-By default, enabling datacapture will collect shopper emails, enabling you to run newsletter campaigns. However, with custom fields you can collect
+By default, enabling DataCapture will collect shopper emails, enabling you to run newsletter campaigns. However, with custom fields you can collect
 any additional data you require to personalise the shopping experience and retarget shoppers. To standardise the data you can collect information using
 radio buttons, dropdowns, date pickers or free text input.
 
-<Frame caption = "Kwik Fit use datacapture to personalise the shopping experience and direct shoppers to their local branch">
+<Frame caption = "Kwik Fit use DataCapture to personalise the shopping experience and direct shoppers to their local branch">
 <img
     className="block dark:hidden"
     src="/images/kwikFit.png"
