--- a/section/gettingStarted/customiseBranding.mdx
+++ b/section/gettingStarted/customiseBranding.mdx
@@ -28,9 +28,9 @@ create will be applied to all of your reward flows, so it's a great way to build
 
 #### Favicon, Logo and Banner Image
 The brand logo and banner image is shown on the key screens throughout the reward flow and the favicon is shown on any 
-[go-certify hosted](https://secure.gocertify.me/at/gosnow) landing pages that you may link to. 
+[gocertify hosted](https://secure.gocertify.me/at/gosnow) landing pages that you may link to. 
 
-Provide the image files, with the correct dimensions (listed below), to your gocertify account manager and we will handle the rest.
+Provide your gocertify account manager with the image files of the correct dimensions (listed below), and we will handle the rest.
 
 <Frame caption = "Ideal dimensions for your favicon are 36 x 36 px">
 <img
@@ -88,7 +88,7 @@ You can provide up to 4 font files to customise the heading, normal, tagline and
 </Frame>
 
 #### Custom Styling
-The Advanced CSS option let's you can go even further with your customisation. Your customer success manager will be able to help you build and apply any customisations you need, but for inspiration the most popular customisations are captured below. The [Advanced CSS](/section/buildRewardFlows/advancedCSS) section has even more examples.
+The Advanced CSS option let's you can go even further with your customisation. Your customer success manager will be able to help you build and apply any customisations you need, but for inspiration the most popular customisations are captured below. The [Advanced CSS](/section/gettingStarted/advancedCSS) section has even more examples.
 
 <AccordionGroup>
   <Accordion title="Hide iFrame Brand Logo" icon="square-minus">
