--- a/section/gettingStarted/landingPages.mdx
+++ b/section/gettingStarted/landingPages.mdx
@@ -20,20 +20,22 @@ Landing pages are a powerful tool for converting key communities and boosting yo
 
   To increase SEO traffic ensure that the group name and “discount” is mentioned.
 
+  - **Clear Page Slug:** i.e `student`, `key-worker`, `senior`, `youth`, `disability`
   - **Meta title and H1:** _company_ student discount
   - **Meta description:** We know that a little help goes a long way when you're a student. Verify your student status and you can get 10% off.
+  - **Relevant Copy:** ~300 words talking about the campaign and why it's important to your audience.
 
 </Tip>
 
-<Frame caption="LK Bennetts campaign pages drive evergreen revenue growth YoY.">
+<Frame caption="Farfetch's campaign pages drive evergreen revenue growth YoY.">
   <img
     className="block dark:hidden"
-    src="/images/LKBennett-iFrame.png"
+    src="/images/farfetchCampaign.png"
     alt="Hero Light"
   />
   <img
     className="hidden dark:block"
-    src="/images/LKBennett-iFrame.png"
+    src="/images/farfetchCampaign.png"
     alt="Hero Dark"
   />
 </Frame>
@@ -48,13 +50,18 @@ Adding a campaign specific landing page is simple, we recommend getting started 
 
 ## Create multi-offers page
 
-OfferHub is a centralised location for all your discounts and offers. It's a great way to showcase all your discounts in one place and drive traffic to your site.
+OfferHub is a centralised location for all your discounts and offers. It's a great way to showcase all your promotions in one place and drive traffic to your site.
 
 <Tip>
   Best practice is to create a dedicated multi-offers page to showcase all your discounts in one place. To increase SEO traffic ensure the terms “discount codes”, “offers” and “coupon” (if wanting to rank in the the USA) are mentioned:
 
-  - **Meta title and H1:** Official {company} Discount Codes and Offers
-  - **Meta description:** Did you just search for a _company_ discount code? That's an intelligent move - you're obviously a savvy shopper. This is the official discount code page for _company_ and you won't find a better discount elsewhere.
+  - **Clear Page Slug:** i.e `discounts`
+  - **Meta title and H1:** Official _Brand_ Discount Codes and Offers
+  - **Meta description:** Did you just search for a _brand_ discount code? That's an intelligent move - you're obviously a savvy shopper. This is the official discount code page for _brand_ and you won't find a better discount elsewhere.
+  - **Relevant Copy:** ~300 words talking about the rewards you offer and why they're important to your audience.
+  - **FAQs:** Answer common questions about your rewards.
+
+
 </Tip>
 
   <Frame caption="OfferHub is a powerful showcase of all your offers and discounts in one place. ">
