--- a/section/gettingStarted/overview.mdx
+++ b/section/gettingStarted/overview.mdx
@@ -28,7 +28,11 @@ these rewards at scale you can boost conversion and retention while giving back 
 ## Introducing Reward Flows
 Think of a gocertify reward flow as the journey that your shoppers go on, from the moment they first learn about a reward on-site to the moment they redeem it.  
 
-With gocertify you can create as many of these custom reward flows as you want and tailor them to your brand and your audience. For example, creating a campaign around [unique rewards](/section/buildRewardFlows/chooseReward) (10% off or Free delivery), gating offers to specific [target
-audiences](/section/buildRewardFlows/closedUserGroups) (e.g. Key workers or Students), and leveraging our [Data Capture](/section/captureData/overview) features to exchange rewards for valuable first party data (i.e. Email or D.O.B).
+With gocertify you can create as many of these custom reward flows as you want and tailor them to your brand and your audience. For example, creating a campaign around [unique rewards](/section/buildRewardFlows/chooseReward) (e.g. discounts or gift cards), gating offers to specific [target
+audiences](/section/buildRewardFlows/closedUserGroups) (e.g. key workers or students), and leveraging our [DataCapture](/section/captureData/overview) features to collect valuable first party data (i.e. Email or D.O.B).
 
-show each step
+## How to use this guide
+This guide is designed to help you get started with gocertify. We'll walk you through the process of creating a reward flow, from start to finish. Each key step in the process is laid out as a section within the left hand sidebar, if you're on mobile click the menu icon in the top left to view.
+
+Remember, if you get stuck at any point please reach out to your helpful customer success manager! They are always happy to help and a wealth of knowledge on how to get the most out of gocertify.
+
