--- a/section/gettingStarted/quickStart.mdx
+++ b/section/gettingStarted/quickStart.mdx
@@ -20,7 +20,7 @@ import LightweightScript from '/snippets/lightweight-script.mdx';
 
 ## Integration steps
 
-Integrate gocertify by adding our <Tooltip tip="Our script is just 12kb and optimised for performance">lightweight script</Tooltip> to the `<head>` of your site ([no developer needed](integrateOnSite)). This enables you to launch your offers within minutes and have full control over the shopper experience through our self-serve platform (supported by your helpful gocertify account manager).
+Integrate gocertify by adding our <Tooltip tip="Our script is just 12kb and optimised for performance">lightweight</Tooltip> [script](integrateOnSite) to the `<head>` of your site ([no developer needed](https://www.loom.com/share/c71c832b378e4e17b6aa80a6bcc284a7?sid=9604726f-f6e8-4997-bf66-9a11773773d2)). This enables you to launch your offers within minutes and have full control over the shopper experience through our self-serve platform (supported by your helpful gocertify account manager).
 
 In addition to adding the head script, we recommend also building dedicated [landing pages](landingPages) for your highest value campaigns to maximise performance.
 
